--- a/templates/_foot.html
+++ b/templates/_foot.html
@@ -1,4 +1,4 @@
 <nav class="navbar footer">
     {% comment %} <div><a href="{% url 'movies:index' %}"><img src="/static/images/logo.png" alt="logo"></a></div> {% endcomment %}
-    <span class="navbar-brand mb-0 h1 text-center">Copyright © 2021 by YH & JW, All rights reserved.</span>
+    <span class="navbar-brand mb-0 h1 text-center">Copyright © 2021 by YUNHA KIM, All rights reserved.</span>
 </nav>
