--- a/templates/_nav.html
+++ b/templates/_nav.html
@@ -10,13 +10,19 @@
       <ul class="navbar-nav">
       {% if user.is_authenticated %}
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'community:index' %}">review</a>
+          <a class="nav-link" href="{% url 'movies:index' %}">movie</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'community:create' %}">new review</a>
+          <a class="nav-link" href="{% url 'community:index' %}">community</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'accounts:logout' %}">logout</a>
+          <a class="nav-link" href="{% url 'accounts:profile' user %}">profile</a>
+        </li>
+        <li class="nav-item">
+          <form action="{% url 'accounts:logout' %}" method="POST">
+            {% csrf_token %}
+            <input type="submit" value="logout">
+          </form>
         </li>
       {% else %}
         <li class="nav-item">
