--- a/community/templates/community/index.html
+++ b/community/templates/community/index.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-  
+    <h1>Community</h1><hr>
   {% for review in reviews %}
     <p>작성자 : <a href="{% url 'accounts:profile' review.user.username %}">{{ review.user }}</a></p>
     <p>글 번호: {{ review.pk }}</p>
