--- a/movies/templates/movies/detail.html
+++ b/movies/templates/movies/detail.html
@@ -3,16 +3,16 @@
 {% block content %}
   <h2>Detail</h2>
   <h2>{{movie.title}}</h2>
-  <p>{{movie.release_date}}</p>
-  <p>{{movie.popularity}}</p>
-  <p>{{movie.vote_count}}</p>
-  <p>{{movie.overview}}</p>
-  <img src="{{movie.poster_path}}" alt="">
-  <p>{{movie.poster_path}}</p>
+  <p>개봉일 : {{movie.release_date}}</p>
+  <p>관객 수 : {{movie.popularity}}</p>
+  <p>평점 수? :{{movie.vote_count}}</p>
   {% comment %} views.py의 context 에서 genres를 보냄 / views.py에서 만들어서 변수를 가져다 씀 {% endcomment %}
-  {% for genre in genres %}
-      <p>{{genre}}</p>
+  {% for genre in genre_ids %}
+      <span>{{ genre.name }} |</span>
   {% endfor %}
+  <p>줄거리 : {{movie.overview}}</p>
+  <img src="https://image.tmdb.org/t/p/w780{{movie.poster_path}}" alt="">
+
 
   <h4>리뷰 목록</h4>
   <button><a href="{% url 'movies:review_create' movie.pk %}">리뷰 작성</a></button>
