--- a/movies/templates/movies/detail.html
+++ b/movies/templates/movies/detail.html
@@ -2,7 +2,7 @@
 
 {% block content %}
   <h2>Detail</h2>
-  <h2>{{movie.title}}</h2>
+  <h2 id="movieTitle">{{movie.title}}</h2>
   <p>개봉일 : {{movie.release_date}}</p>
   <p>관객 수 : {{movie.popularity }}</p>
   <p>평균 평점 : {{movie.vote_average }}</p>
@@ -44,13 +44,12 @@
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script>
   // 유튜브 예고편
-  const API_KEY = 'AIzaSyAc3mdPbqCFEZYlNjOeGAw_lxey1321-GQ'
-  // const API_KEY = 'AIzaSyBYoVQuyYq7YYG2loQq83pISsFAFr64CU8'
+  const API_KEY = 'AIzaSyAD5IVkdRMFP0Iqo8xxmBbNM4Z1S2F8GzU'
   const YOUTUBE_URL = 'https://www.googleapis.com/youtube/v3/search'
   const videos = []
   const video = []
-  const title = document.getElementById('movieTitle').innerText;
-
+  const title = document.getElementById('movieTitle').innerText
+  console.log(title)
   const get_preview = function () {
     const params = {
       key: API_KEY,
@@ -71,5 +70,8 @@
       })
   }
   get_preview()
+  
+
   </script>
+  {% comment %} <a href="https://serieson.naver.com/search?t=all&q={{ movie.title }}&ot=&so=rel.dsc&fs=movie"> 시리즈온</a> {% endcomment %}
 {% endblock %}
