--- a/templates/base.html
+++ b/templates/base.html
@@ -27,10 +27,8 @@
     <br>
 
     {% block content %}
-    {% endblock %}
+    {% endblock content%}
 
-    {% block body %}
-    {% endblock %}
     {% comment %} {% bootstrap_javascript jquery='full' %} {% endcomment %}
   </div>
   <!-- {% include '_foot.html' %} -->
