--- a/templates/_nav.html
+++ b/templates/_nav.html
@@ -2,7 +2,7 @@
 
 <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" aria-current="page" href="{% url 'movies:index'%}">Home</a>
+    <a class="navbar-brand" aria-current="page" href="http://127.0.0.1:8000/home/">Home</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
