--- a/templates/_nav.html
+++ b/templates/_nav.html
@@ -1,6 +1,6 @@
 {% load bootstrap5 %}
 
-<nav class="navbar fixed-top navbar-expand-lg navbar-dark ">
+<nav class="navbar fixed-top navbar-expand-lg navbar-light">
   <div class="container-fluid">
     <a class="navbar-brand" aria-current="page" href="http://127.0.0.1:8000/home/">Home</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
