--- a/movies/templates/movies/detail.html
+++ b/movies/templates/movies/detail.html
@@ -1,12 +1,25 @@
 {% extends 'base.html' %}
 
+{% block CSS %}
+  <!-- Favicon-->
+  <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+  <!-- Bootstrap icons-->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
+  <!-- Core theme CSS (includes Bootstrap)-->
+  <link href="css/styles.css" rel="stylesheet" />
+{% endblock CSS %}
+
+
+
 {% block content %}
+{% comment %} 
+
   <h2>Detail</h2>
   <h2 id="movieTitle">{{movie.title}}</h2>
   <p>개봉일 : {{movie.release_date}}</p>
   <p>관객 수 : {{movie.popularity }}</p>
   <p>평균 평점 : {{movie.vote_average }}</p>
-  {% comment %} views.py의 context 에서 genres를 보냄 / views.py에서 만들어서 변수를 가져다 씀 {% endcomment %}
+
   {% for genre in genre_ids %}
       <span>{{ genre.name }} |</span>
   {% endfor %}
@@ -15,11 +28,18 @@
   
   <!-- 예고편 -->
   <div class="d-none d-sm-block mb-5 pb-4">
-    <div id="map" class="d-flex justify-content-center" style="height: 480px; position: relative; overflow: hidden;"> 
-        <iframe id="preview" class="embed-responsive-item mx-auto" frameborder="0" allowfullscreen width="75%" height="100%"></iframe>
+    <div id="map" class="d-flex justify-content-center" style="height: 1000px; position: relative; overflow: hidden;"> 
+        <iframe id="preview" class="embed-responsive-item mx-auto" frameborder="0" allowfullscreen width="560" height="315"></iframe>
     </div>
-  </div>
+  </div>  
+  
+  <body style="margin:0px;padding:0px;"> 
+  <iframe id="preview" frameborder="0" style="overflow:hidden;overflow-x:hidden;overflow-y:hidden;height:100%;width:50%;" height="100vh" width="50%"></iframe> </body> {% endcomment %}
+{% comment %} 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/ff5XUk1i95Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> {% endcomment %}
 
+
+{% comment %} 
   </div>
   <h4>리뷰 목록</h4>
   <button><a href="{% url 'movies:review_create' movie.pk %}">리뷰 작성</a></button>
@@ -39,9 +59,133 @@
   {% endfor %}
   <hr>
 
-  <a href="{% url 'movies:index' %}">[back]</a>
+  <a href="{% url 'movies:index' %}">[back]</a> {% endcomment %}
 
-<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
+{% comment %}  {% endcomment %}
+  {% comment %} <a href="https://serieson.naver.com/search?t=all&q={{ movie.title }}&ot=&so=rel.dsc&fs=movie"> 시리즈온</a> {% endcomment %}
+
+
+  
+    <body class="d-flex flex-column h-100">
+        <main class="flex-shrink-0">
+            <!-- Navigation-->
+
+            <!-- Header-->
+            <header class="bg-dark py-5">
+              <div class="container px-5">
+                <div class="row gx-5 align-items-center justify-content-center">
+                  <div class="col-lg-8 col-xl-7 col-xxl-6">
+                    <div class="my-5 text-center text-xl-start">
+                      <h1 class="display-5 fw-bolder text-white mb-2" id="movieTitle">{{ movie.title }}</h1>
+                      <p class="lead fw-normal text-white-50 mb-4">{{ movie.overview}}</p>
+                      {% for genre in genre_ids %}
+                        <span>{{ genre.name }} |</span>
+                      {% endfor %}
+                    </div>
+                  </div>
+                  <div class="col-xl-5 col-xxl-6 d-none d-xl-block text-center"><img class="img-fluid rounded-3 my-5" src="https://image.tmdb.org/t/p/w780{{movie.poster_path}}" alt="..." /></div>
+                </div>
+              </div>
+            </header>
+            <!-- Features section: 리뷰 목록-->
+            <section class="py-5 bg-light">
+              <div class="container px-5">
+                  <div class="row gx-5">
+                    <div class="col-xl-6">
+                      
+                        <button><a href="{% url 'movies:review_create' movie.pk %}">리뷰 작성</a></button>
+                      
+                        <h2 class="fw-bolder fs-5 mb-4">review</h2> 
+                        {% if reviews|length %}
+                          <b>({{ reviews|length }})</b>
+                        {% endif %}
+                        <!-- News item-->
+                        {% for review in reviews|slice:":3" %}
+                          <div class="mb-5">
+                            <div class="small text-muted">{{ review.updated_at }}</div>
+                            <a class="link-dark" href="{% url 'movies:review_detail' movie.pk review.pk %}"><h3>{{ review.title }}</h3></a>
+                          </div>
+                        {% empty %}
+                          <p><b>리뷰가 없어요..</b></p>
+                        {% endfor %}
+                        <!-- News 더보기  -->
+                        <div class="text-end mb-5 mb-xl-0">
+                          <a class="text-decoration-none" href="{% url 'community:index' %}">
+                            more reviews
+                            <i class="bi bi-arrow-right"></i>
+                          </a>
+                        </div>
+                    </div>
+                      <!-- youtube  -->
+                      <div class="col-xl-6">
+                          <div class="card border-0 h-100">
+                              <div class="card-body p-4">
+                                  <div class="d-flex h-100 align-items-center justify-content-center">
+                                    <div class="d-none d-sm-block mb-5 pb-4">
+                                      <div id="map" class="d-flex justify-content-center" style="height: 1000px; position: relative; overflow: hidden;"> 
+                                        <!-- <iframe id="preview" class="embed-responsive-item mx-auto" frameborder="0" allowfullscreen width="560" height="315"></iframe> -->
+                                        <iframe id="preview" class="embed-responsive-item mx-auto" frameborder="0" allowfullscreen width="560" height="315"></iframe>
+                                      </div>
+                                    </div>
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </section>
+            <!-- Blog preview section-->
+            <section class="py-5">
+              <div class="container px-5">
+                  <h2 class="fw-bolder fs-5 mb-4">아래 작품은 어떠세요?</h2>
+                  <div class="row gx-5">
+                    {% for genre_movie in genre_movies %}
+                      {% for genre, movies in genre_movie.items %}
+                        {% if movies %}
+                          {% for similar_movie in movies|slice:":4" %}
+                            {% if similar_movie != movie %} <!-- 중복 작품 제거-->
+                              <div class="col-lg-4 mb-5">
+                                  <div class="card h-100 shadow border-0">
+                                      <img class="card-img-top" src="https://image.tmdb.org/t/p/w500{{ similar_movie.poster_path }}" alt="..." />
+                                      <div class="card-body p-4">
+                                          <a class="text-decoration-none link-dark stretched-link" href="#!"><h5 class="card-title mb-3">{{ similar_movie.title }}</h5></a>
+                                          <p class="card-text mb-0">{{ similar_movie.overview }}</p>
+                                      </div>
+                                      <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
+                                          <div class="d-flex align-items-end justify-content-between">
+                                              <div class="d-flex align-items-center">
+                                                  <div class="small">
+                                                      <div class="fw-bold">{{ similar_movie.released_date }}</div>
+                                                      
+                                                  </div>
+                                              </div>
+                                          </div>
+                                      </div>
+                                  </div>
+                              </div>
+                            {% endif %}
+                          {% endfor %}
+                        {% endif %}
+                      {% endfor %}
+                    {% endfor %}
+                  </div>
+                  <div class="text-end mb-5 mb-xl-0">
+                      <a class="text-decoration-none" href="#!">
+                          More stories
+                          <i class="bi bi-arrow-right"></i>
+                      </a>
+                  </div>
+              </div>
+          </section>
+        </main>
+
+        <!-- Bootstrap core JS-->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+        <!-- Core theme JS-->
+        <script src="js/scripts.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
 <script>
   // 유튜브 예고편
   const API_KEY = ''
@@ -73,5 +217,4 @@
   
 
   </script>
-  {% comment %} <a href="https://serieson.naver.com/search?t=all&q={{ movie.title }}&ot=&so=rel.dsc&fs=movie"> 시리즈온</a> {% endcomment %}
-{% endblock %}
+{% endblock content %}
