--- a/movies/templates/movies/home.html
+++ b/movies/templates/movies/home.html
@@ -1,58 +1,82 @@
-{% extends 'base.html' %}
-{% load static %}
-{% block content %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+  <!--font-awesome-->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+  <!-- axios cdn -->
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+  {% load bootstrap5 %}
+  {% load static %}
+  {% load static %}
+  {% load socialaccount %}
+  <style>
+    {% comment %} body {
+      background-color: black;
+    } {% endcomment %}
+      header {
+      position: relative;
+      background-color: black;
+      height: 100vh;
+      min-height: 25rem;
+      width: 100%;
+      overflow: hidden;
+    }
 
-{% block CSS %}
+    header video {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      min-width: 100%;
+      min-height: 100%;
+      width: auto;
+      height: auto;
+      z-index: 0;
+      -ms-transform: translateX(-50%) translateY(-50%);
+      -moz-transform: translateX(-50%) translateY(-50%);
+      -webkit-transform: translateX(-50%) translateY(-50%);
+      transform: translateX(-50%) translateY(-50%);
+    }
 
-<style>
-body {
-  background-color: black;
-}
-  header {
-  position: relative;
-  background-color: black;
-  height: 100vh;
-  min-height: 25rem;
-  width: 100%;
-  overflow: hidden;
-}
+    header .container {
+      position: relative;
+      z-index: 2;
+      color: white;
+    }
 
-header video {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  min-width: 100%;
-  min-height: 100%;
-  width: auto;
-  height: auto;
-  z-index: 0;
-  -ms-transform: translateX(-50%) translateY(-50%);
-  -moz-transform: translateX(-50%) translateY(-50%);
-  -webkit-transform: translateX(-50%) translateY(-50%);
-  transform: translateX(-50%) translateY(-50%);
-}
+    header .overlay {
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 100%;
+      width: 100%;
+      background-color: black;
+      opacity: 0.5;
+      z-index: 1;
+    }
+</style>
+</head>
 
-header .container {
-  position: relative;
-  z-index: 2;
-  color: white;
-}
-
-header .overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  background-color: black;
-  opacity: 0.5;
-  z-index: 1;
-}
-
-  </style>
-{% endblock CSS %}
 
 <body>
+
+<nav class="navbar navbar-light bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand">Navbar</a>
+    {% comment %} <form class="d-flex">
+      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-success" type="submit">Search</button>
+    </form> {% endcomment %}
+    <button type="button" class="btn d-flex btn-outline-primary" data-bs-toggle="modal" data-bs-target="#loginModal">
+      Login
+    </button>
+  </div>
+</nav>
+
   <header>
     <!-- 예고편 -->
     {% comment %} <div class="d-none d-sm-block mb-5 pb-4">
@@ -60,18 +84,25 @@ header .overlay {
           <iframe id="preview" class="embed-responsive-item mx-auto" frameborder="0" allowfullscreen width="75%" height="100%"></iframe>
       </div>
     </div> {% endcomment %}
-    <!-- 작동 하는 코드. ..-->
-    
+
+
+    {% comment %} <!-- 작동 하는 코드. ..-->
     <div class="overlay"></div>
     <video class="bg-primary_black h-100 w-100" playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop" id="bg-video">
         <source src="{% static 'course-video.mp4' %}" type="video/mp4" />
-    </video>
+    </video> {% endcomment %}
+
+
     <!-- The header content -->
     <div class="container h-100">
       <div class="d-flex h-100 text-center align-items-center">
         <div class="w-100 text-white">
           <h1 class="display-3">Video Header</h1>
           <p class="lead mb-0">Using HTML5 Video and Bootstrap</p>
+          <!-- Button trigger modal -->
+          <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#signUpModal">
+            Sign Up
+          </button>
         </div>
       </div>
     </div>
@@ -91,20 +122,114 @@ header .overlay {
       </div>
     </div>
   </section>
-</body>
+
+
+<!-- 회원가입 Modal -->
+<div class="modal fade" id="signUpModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="signUpModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content rounded-5 shadow">
+      <div class="modal-header p-5 pb-4 border-bottom-0">
+        <h5 class="modal-title fw-bold mb-0" id="signUpModalLabel">Sign up</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body p-5 pt-0">
+        <form class="" action="{% url 'accounts:signup' %}" method="POST">
+          {% csrf_token %}
+          <div class="form-floating mb-3">
+            <input name="username" maxlength="150" autocapitalize="none" autocomplete="username" autofocus required id="id_username" type="text" class="form-control rounded-4" id="floatingInput" placeholder="user id">
+            <label for="id_username">ID</label>
+          </div>
+          <div class="form-floating mb-3">
+            <input name="password1" autocomplete="new-password" required id="id_password1" type="password" class="form-control rounded-4" id="floatingPassword" placeholder="Password">
+            <label for="id_password1">Password</label>
+          </div>
+          <div class="form-floating mb-3">
+            <input name="password2" autocomplete="new-password" required id="id_password2" type="password" class="form-control rounded-4" id="floatingPassword" placeholder="Password">
+            <label for="id_password2">Password Confirmation</label>
+          </div>
+          <button class="w-100 mb-2 btn btn-lg rounded-4 btn-primary" type="submit">Sign up</button>
+          <small class="text-muted">By clicking Sign up, you agree to the terms of use.</small>
+          <hr class="my-4">
+          <h2 class="fs-5 fw-bold mb-3">Or use a third-party</h2>
+          <button class="w-100 py-2 mb-2 btn btn-outline-dark rounded-4">
+            <svg class="bi me-1" width="16" height="16"><use xlink:href="#google"></use></svg> 
+            <a href="{% provider_login_url 'google' next="/movies/" %}">Sign up with Google</a>
+          </button>
+          <button class="w-100 py-2 mb-2 btn btn-outline-primary rounded-4" type="submit">
+            <svg class="bi me-1" width="16" height="16"><use xlink:href="#naver"></use></svg>
+            <a href="{% provider_login_url 'naver' next="/movies/" %}">Sign up with Naver</a>
+          </button>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<!-- 로그인 Modal -->
+<div class="modal fade" id="loginModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content rounded-5 shadow">
+      <div class="modal-header p-5 pb-4 border-bottom-0">
+        <h5 class="modal-title fw-bold mb-0" id="loginModalLabel">Login</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body p-5 pt-0">
+        <form class="" action="{% url 'accounts:login' %}" method="POST">
+          {% csrf_token %}
+          <div class="form-floating mb-3">
+            <input name="username" maxlength="150" autocapitalize="none" autocomplete="username" autofocus required id="id_username" type="text" class="form-control rounded-4" id="floatingInput" placeholder="user id">
+            <label for="id_username">ID</label>
+          </div>
+          <div class="form-floating mb-3">
+            <input name="password" autocomplete="new-password" required id="id_password" type="password" class="form-control rounded-4" id="floatingPassword" placeholder="Password">
+            <label for="id_password">Password</label>
+          </div>
+          <button class="w-100 mb-2 btn btn-lg rounded-4 btn-primary" type="submit">Login</button>
+          <small class="text-muted">By clicking Sign up, you agree to the terms of use.</small>
+          <hr class="my-4">
+          <h2 class="fs-5 fw-bold mb-3">Or use a third-party</h2>
+          <button class="w-100 py-2 mb-2 btn btn-outline-dark rounded-4">
+            <svg class="bi me-1" width="16" height="16"><use xlink:href="#google"></use></svg> 
+            <a href="{% provider_login_url 'google' next="/movies/" %}">Login with Google</a>
+          </button>
+          <button class="w-100 py-2 mb-2 btn btn-outline-primary rounded-4" type="submit">
+            <svg class="bi me-1" width="16" height="16"><use xlink:href="#naver"></use></svg>
+            <a href="{% provider_login_url 'naver' next="/movies/" %}">Login with Naver</a>
+          </button>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+
+
+
+
+
+
   
-  {% comment %} 
-  <div class="bg-primary_black h-full w-full" playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop" id="bg-video"> 
+
+  {% comment %} <div class="bg-primary_black h-full w-full" playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop" id="bg-video"> 
     <iframe id="preview" class="embed-responsive-item mx-auto" frameborder="0" allowfullscreen width="100%" height="100vh"></iframe>
-  </div> 
-  {% endcomment %}
+  </div>  {% endcomment %}
+
 
 <!-- 되긴 하는데 ... -->
-{% comment %} 
-  <body style="margin:0px;padding:0px;overflow:hidden"> 
-  <iframe id="preview" frameborder="0" style="overflow:hidden;overflow-x:hidden;overflow-y:hidden;height:100%;width:100%;position:absolute;top:0px;left:0px;right:0px;bottom:0px" height="100%" width="100%"></iframe> </body> {% endcomment %}
 
-  {% comment %} <h2 id="movieTitle">{{random_movie.title}}</h2>
+  <body style="margin:0px;padding:0px;overflow:hidden"> 
+  <iframe id="preview" frameborder="0" style="overflow:hidden;overflow-x:hidden;overflow-y:hidden;height:100%;width:100%;position:absolute;top:0px;left:0px;right:0px;bottom:0px" height="100%" width="100%"></iframe> </body>
+
+  <h2 id="movieTitle">{{random_movie.title}}</h2>
   <p>{{ random_movie.release_date }}</p>
 
 
@@ -139,6 +264,15 @@ header .overlay {
   get_preview()
   
 
-  </script> {% endcomment %}
+  </script> 
   {% comment %} <a href="https://serieson.naver.com/search?t=all&q={{ movie.title }}&ot=&so=rel.dsc&fs=movie"> 시리즈온</a> {% endcomment %}
-{% endblock %}
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+  {% bootstrap_javascript %}
+</body>
+</html>
+
+
+
+
+
