--- a/templates/_nav.html
+++ b/templates/_nav.html
@@ -1,4 +1,6 @@
 {% load bootstrap5 %}
+{% load socialaccount %}
+
 
 <nav class="navbar fixed-top navbar-expand-lg navbar-light">
   <div class="container-fluid">
@@ -27,14 +29,117 @@
           </form>
         </li>
       {% else %}
-        <li class="nav-item">
+        {% comment %} <li class="nav-item">
           <a class="nav-link" href="{% url 'accounts:signup' %}">sign up</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{% url 'accounts:login' %}">login</a>
-        </li>
+        </li> {% endcomment %}
+        <!-- 회원가입 Button trigger modal -->
+        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#signUpModal">
+          Sign Up
+        </button>
+        <!-- Button trigger modal -->
+        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#loginModal">
+          Login
+        </button>
       {% endif %}
       </ul>
     </div>
   </div>
 </nav>
+
+
+
+
+
+
+<!-- 회원가입 Modal -->
+<div class="modal fade" id="signUpModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="signUpModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content rounded-5 shadow">
+      <div class="modal-header p-5 pb-4 border-bottom-0">
+        <h5 class="modal-title fw-bold mb-0" id="signUpModalLabel">Modal title</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body p-5 pt-0">
+        <form class="" action="{% url 'accounts:signup' %}" method="POST">
+          {% csrf_token %}
+          <div class="form-floating mb-3">
+            <input name="username" maxlength="150" autocapitalize="none" autocomplete="username" autofocus required id="id_username" type="text" class="form-control rounded-4" id="floatingInput" placeholder="user id">
+            <label for="id_username">ID</label>
+          </div>
+          <div class="form-floating mb-3">
+            <input name="password1" autocomplete="new-password" required id="id_password1" type="password" class="form-control rounded-4" id="floatingPassword" placeholder="Password">
+            <label for="id_password1">Password</label>
+          </div>
+          <div class="form-floating mb-3">
+            <input name="password2" autocomplete="new-password" required id="id_password2" type="password" class="form-control rounded-4" id="floatingPassword" placeholder="Password">
+            <label for="id_password2">Password Confirmation</label>
+          </div>
+          <button class="w-100 mb-2 btn btn-lg rounded-4 btn-primary" type="submit">Sign up</button>
+          <small class="text-muted">By clicking Sign up, you agree to the terms of use.</small>
+          <hr class="my-4">
+          <h2 class="fs-5 fw-bold mb-3">Or use a third-party</h2>
+          <button class="w-100 py-2 mb-2 btn btn-outline-dark rounded-4">
+            <svg class="bi me-1" width="16" height="16"><use xlink:href="#google"></use></svg> 
+            <a href="{% provider_login_url 'google' next="/movies/" %}">Sign up with Google</a>
+          </button>
+          <button class="w-100 py-2 mb-2 btn btn-outline-primary rounded-4" type="submit">
+            <svg class="bi me-1" width="16" height="16"><use xlink:href="#naver"></use></svg>
+            <a href="{% provider_login_url 'naver' next="/movies/" %}">Sign up with Naver</a>
+          </button>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+
+
+
+
+<!-- 로그인 Modal -->
+<div class="modal fade" id="loginModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content rounded-5 shadow">
+      <div class="modal-header p-5 pb-4 border-bottom-0">
+        <h5 class="modal-title fw-bold mb-0" id="loginModalLabel">Login</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body p-5 pt-0">
+        <form class="" action="{% url 'accounts:login' %}" method="POST">
+          {% csrf_token %}
+          <div class="form-floating mb-3">
+            <input name="username" maxlength="150" autocapitalize="none" autocomplete="username" autofocus required id="id_username" type="text" class="form-control rounded-4" id="floatingInput" placeholder="user id">
+            <label for="id_username">ID</label>
+          </div>
+          <div class="form-floating mb-3">
+            <input name="password" autocomplete="new-password" required id="id_password" type="password" class="form-control rounded-4" id="floatingPassword" placeholder="Password">
+            <label for="id_password">Password</label>
+          </div>
+          <button class="w-100 mb-2 btn btn-lg rounded-4 btn-primary" type="submit">Login</button>
+          <small class="text-muted">By clicking Sign up, you agree to the terms of use.</small>
+          <hr class="my-4">
+          <h2 class="fs-5 fw-bold mb-3">Or use a third-party</h2>
+          <button class="w-100 py-2 mb-2 btn btn-outline-dark rounded-4">
+            <svg class="bi me-1" width="16" height="16"><use xlink:href="#google"></use></svg> 
+            <a href="{% provider_login_url 'google' next="/movies/" %}">Login with Google</a>
+          </button>
+          <button class="w-100 py-2 mb-2 btn btn-outline-primary rounded-4" type="submit">
+            <svg class="bi me-1" width="16" height="16"><use xlink:href="#naver"></use></svg>
+            <a href="{% provider_login_url 'naver' next="/movies/" %}">Login with Naver</a>
+          </button>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
